--- a/nuevo/heroes-finished.html
+++ b/nuevo/heroes-finished.html
@@ -23,7 +23,7 @@
 
     async function populate() {
 
-      const requestURL = 'https://mdn.github.io/learning-area/javascript/oojs/json/superheroes.json';
+      const requestURL = 'https://raw.githubusercontent.com/santiagopereira12/presentaci-n/version2/nuevo/superheroes.json';
       const request = new Request(requestURL);
 
       const response = await fetch(request);
